[package]
name = "ctyun_keepalive"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
urlencoding = "2.1"
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"
anyhow = "1.0"
futures-util = "0.3"
